[project]
name = "envlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "OSAMA", email = "osy.psyb.7@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
envlib = "envlib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
